deployments/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: uav-platform
  labels:
    app: uav-platform
